<resources>
    <string name="app_name">Домашнее приложение</string>
    <string name="name">Осень</string>
        <string name="stih">
        Как грустны сумрачные дни \n
        Беззвучной осени и хладной! \n
        Какой истомой безотрадной \n
        К нам в душу просятся они! \n \n
        Но есть и дни, когда в крови \n
        Золотолиственных уборов \n
        Горящих осень ищет взоров \n
        И знойных прихотей любви. \n \n
        Молчит стыдливая печаль, \n
        Лишь вызывающее слышно, \n
        И, замирающей так пышно, \n
        Ей ничего уже не жаль. \n   </string>
    <string name="Button_End">Кнопка</string>
    <string name="Button_Menu">Меню</string>
    <string name="Button_Exit">Выход</string>

</resources>