<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/firsttimewriting"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView_stih"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stih"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <Button
        android:id="@+id/button_exit"
        style="@style/Theme.AndroidSandBox.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/firsttimewriting"
        android:text="@string/Button_Exit"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_end"
        app:layout_constraintStart_toEndOf="@+id/button_menu" />

    <Button
        android:id="@+id/button_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Button_Menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_end"
        style="@style/Theme.AndroidSandBox.Button.Big"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/my_button"
        android:text="@string/Button_End"
        app:backgroundTint="@color/my_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>